...
    android:id="@+id/navigationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/navigationMapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mapbox_uiAttribution="false"
        app:mapbox_uiCompass="false"
        app:mapbox_uiLogo="false"/>

...
        android:id="@+id/summaryBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"/>

    <com.mapbox.services.android.navigation.ui.v5.RecenterButton
        android:id="@+id/recenterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="16dp"
        android:visibility="invisible"
        app:layout_anchor="@id/summaryBottomSheet"
...
